<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplitActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:id="@+id/linear_layout_choose_split_image"
               android:layout_width="145dp"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">

               <TextView
                   android:id="@+id/text_view_split_on"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/split_on"
                   android:textSize="22sp" />

               <RadioGroup
                   android:id="@+id/radio_group_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">

                   <RadioButton
                       android:id="@+id/radio_button_9_chunks"
                       style="@style/RadioButton"
                       android:text="@string/_9_chunks" />

                   <RadioButton
                       android:id="@+id/radio_button_16_chunks"
                       style="@style/RadioButton"
                       android:text="@string/_16_chunks" />

                   <RadioButton
                       android:id="@+id/radio_button_25_chunks"
                       style="@style/RadioButton"
                       android:text="@string/_25_chunks" />

                   <RadioButton
                       android:id="@+id/radio_button_36_chunks"
                       style="@style/RadioButton"
                       android:text="@string/_36_chunks" />
               </RadioGroup>

               <Button
                   android:id="@+id/btn_split"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/btn_split"
                   android:textSize="18sp" />
           </LinearLayout>

           <ImageView
               android:id="@+id/image_view_whole_image"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/linear_layout_choose_split_image"
               android:adjustViewBounds="true"
               android:scaleType="fitCenter"
               tools:srcCompat="@tools:sample/avatars" />

       </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>